Done the groundwork for adding a script. Needs a lot of work.